# keli-native-client

./: Cargo.toml  README.md
.github/workflows/: windows-signed-public-release.yml  windows-unsigned-beta-release.yml
crates/keli-cli/: Cargo.toml
crates/keli-cli/src/: lib.rs  main.rs
crates/keli-cli/tests/: args.rs  doctor.rs  http_connect_direct.rs  http_proxy_direct.rs  interop_matrix.rs  listen_mixed_once.rs  local_smoke.rs  managed_mixed.rs  outbound_route.rs  probe_outbound.rs  profile_check.rs  profile_config.rs  readiness_check.rs  route_block.rs  soak_mixed.rs  socks5_direct.rs  subscription_fetch.rs  subscription_update.rs  support_bundle.rs  tun_backend.rs  tun_preflight.rs
crates/keli-cli/tests/support/: vmess.rs
crates/keli-client-core/: Cargo.toml
crates/keli-client-core/src/: lib.rs
crates/keli-client-core/src/panel/: auth.rs  mod.rs  (+5 more)
crates/keli-client-core/tests/: panel_auth.rs  panel_client.rs  panel_endpoint.rs  panel_parse.rs  panel_request.rs
crates/keli-desktop/: Cargo.toml
crates/keli-desktop-shell/: Cargo.toml  build.rs  keli-desktop-shell.exe.manifest
crates/keli-desktop-shell/src/: actions.rs  html.rs  main.rs  settings.rs  support.rs
crates/keli-desktop/src/: app.rs  commands.rs  dependencies.rs  lib.rs  managed.rs  panel.rs  persistence.rs  readiness.rs  service.rs  shell.rs  status.rs  subscription.rs  support.rs
crates/keli-net-core/: Cargo.toml
crates/keli-net-core/src/: direct.rs  dns.rs  grpc.rs  http2.rs  http_connect.rs  http_proxy.rs  lib.rs  metrics.rs  mieru.rs  naive.rs  quic.rs  socks5.rs  tun.rs  websocket.rs
crates/keli-net-core/tests/: direct.rs  dns.rs  grpc.rs  http2.rs  http_connect.rs  http_proxy.rs  metrics.rs  outbound_registry.rs  quic.rs  socks5.rs  tls_tcp.rs  tls_ws.rs  tun.rs  websocket.rs
crates/keli-net-core/tests/support/: vmess.rs
crates/keli-platform/: Cargo.toml
crates/keli-platform/src/: lib.rs
crates/keli-protocol/: Cargo.toml
crates/keli-protocol/src/: lib.rs
crates/keli-protocol/tests/: mihomo.rs  share_links.rs
docs/: design.md
docs/product-design-audit/2026-06-13-keli-ui/: audit-notes.md
docs/superpowers/plans/: 2026-06-02-keli-native-client.md  2026-06-12-desktop-command-facade.md  2026-06-12-desktop-dependency-action-buttons.md  2026-06-12-desktop-dependency-readiness.md  2026-06-12-desktop-diagnostics-summary.md  2026-06-12-desktop-failed-signing-release-diagnostics.md  2026-06-12-desktop-first-run-dependency-smoke-evidence.md  2026-06-12-desktop-gate-machine-takeover.md  2026-06-12-desktop-install-smoke.md  2026-06-12-desktop-local-inbound-mode.md  2026-06-12-desktop-machine-smoke-evidence.md  2026-06-12-desktop-machine-takeover-evidence-preservation.md  2026-06-12-desktop-machine-takeover-retry-evidence.md  2026-06-12-desktop-managed-core-bridge.md  2026-06-12-desktop-managed-tun-runtime.md  2026-06-12-desktop-msi-content-smoke.md  2026-06-12-desktop-msi-installer.md  2026-06-12-desktop-mvp-gate-status-audit.md  2026-06-12-desktop-mvp-status-audit.md  2026-06-12-desktop-mvp-status-fail-on-blocked.md  2026-06-12-desktop-mvp-status-first-run-dependency-evidence.md  2026-06-12-desktop-native-command-host.md  2026-06-12-desktop-node-health-list.md  2026-06-12-desktop-node-health-refresh.md  2026-06-12-desktop-node-list-details.md  2026-06-12-desktop-operation-status-unification.md  2026-06-12-desktop-package-subscription-url-readme.md  2026-06-12-desktop-packaged-support-export-smoke.md  2026-06-12-desktop-portable-package.md  2026-06-12-desktop-primary-blocked-reason-ui.md  2026-06-12-desktop-public-gate-first-run-dependency-evidence.md  2026-06-12-desktop-public-gate-signing-diagnostics.md  2026-06-12-desktop-public-gate-signing-preview-diagnostics.md  2026-06-12-desktop-public-gate-workflow-evidence.md  2026-06-12-desktop-public-release-gate.md  2026-06-12-desktop-public-release-next-steps.md  2026-06-12-desktop-release-evidence-workflows.md  2026-06-12-desktop-release-evidence.md  2026-06-12-desktop-release-gate.md  2026-06-12-desktop-release-readiness-first-run-dependency-diagnostics.md  (+65 more)
docs/superpowers/specs/: 2026-06-12-windows-desktop-mvp-design.md  2026-06-13-desktop-auto-start-core-design.md  2026-06-13-desktop-beta-rc-delivery-audit-design.md  2026-06-13-desktop-beta-rc-running-support-evidence-design.md  2026-06-13-desktop-running-support-smoke-design.md  2026-06-13-desktop-settings-persistence-design.md  2026-06-13-desktop-settings-runtime-application-design.md  2026-06-13-desktop-signed-public-release-orchestration-design.md  2026-06-13-desktop-startup-connect-smoke-design.md  2026-06-13-desktop-startup-restore-smoke-design.md  2026-06-13-github-unsigned-release-automation-design.md  2026-06-13-keliboard-api-driven-desktop-ui-design.md  2026-06-13-one-click-connection-polling-confirmation-design.md  2026-06-13-one-click-connection-state-closure-design.md  2026-06-13-one-click-start-failure-classification-design.md  2026-06-13-support-bundle-connection-diagnosis-design.md  2026-06-13-support-export-cleanup-design.md  2026-06-13-support-export-diagnosis-ui-design.md  2026-06-13-support-export-last-record-design.md  2026-06-13-support-export-open-directory-design.md  2026-06-13-windows-unsigned-beta-rc-design.md
docs/ui-baseline/: README.md
scripts/: desktop-beta-rc-audit.ps1  desktop-beta-rc-audit.tests.ps1  desktop-beta-rc.ps1  desktop-beta-rc.tests.ps1  desktop-github-release-workflow.tests.ps1  desktop-install-smoke.ps1  desktop-install-smoke.tests.ps1  desktop-machine-smoke.ps1  desktop-machine-smoke.tests.ps1  desktop-msi.ps1  desktop-msi.tests.ps1  desktop-mvp-gate.ps1  desktop-mvp-gate.tests.ps1  desktop-mvp-status.ps1  desktop-mvp-status.tests.ps1  desktop-package.ps1  desktop-package.tests.ps1  desktop-public-release-gate.ps1  desktop-public-release-gate.tests.ps1  desktop-release-evidence.ps1  desktop-release-evidence.tests.ps1  desktop-release-readiness.ps1  desktop-release-readiness.tests.ps1  desktop-signed-release-workflow.tests.ps1  desktop-signed-release.ps1  desktop-signed-release.tests.ps1  desktop-signing.ps1  desktop-signing.tests.ps1
