[workspace]
resolver = "2"
members = [
    "crates/keli-client-core",
    "crates/keli-net-core",
    "crates/keli-platform",
    "crates/keli-protocol",
    "crates/keli-cli",
]

[workspace.package]
edition = "2021"
license = "Proprietary"
version = "0.1.12"

[workspace.dependencies]
keli-client-core = { path = "crates/keli-client-core" }
keli-net-core = { path = "crates/keli-net-core" }
keli-platform = { path = "crates/keli-platform" }
keli-protocol = { path = "crates/keli-protocol" }
base64 = "0.22"
rand = "0.8"
rcgen = "0.14.8"
rustls = { version = "0.23.31", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
sha1 = "0.10"
sha2 = "0.10"
shadowsocks-crypto = "0.7"
url = "2"
webpki-roots = "1.0.7"
