[workspace]
resolver = "2"
members = [
    "crates/keli-client-core",
    "crates/keli-net-core",
    "crates/keli-platform",
    "crates/keli-protocol",
    "crates/keli-cli",
]

[workspace.package]
edition = "2021"
license = "Proprietary"
version = "0.1.34"

[workspace.dependencies]
keli-client-core = { path = "crates/keli-client-core" }
keli-net-core = { path = "crates/keli-net-core" }
keli-platform = { path = "crates/keli-platform" }
keli-protocol = { path = "crates/keli-protocol" }
base64 = "0.22"
bytes = "1"
h3 = "0.0.8"
h3-quinn = "0.0.10"
http = "1"
rand = "0.8"
quinn = { version = "0.11.9", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
rcgen = "0.14.8"
rustls = { version = "0.23.31", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
sha1 = "0.10"
sha2 = "0.10"
shadowsocks-crypto = "0.7"
tokio = { version = "1", features = ["macros", "net", "rt", "rt-multi-thread", "time"] }
url = "2"
webpki-roots = "1.0.7"
