[package]
name = "keli-cli"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
keli-client-core.workspace = true
keli-net-core.workspace = true
keli-platform.workspace = true
keli-protocol.workspace = true
serde_json.workspace = true

[dev-dependencies]
base64.workspace = true
bytes.workspace = true
chacha20poly1305.workspace = true
h2.workspace = true
h3.workspace = true
h3-quinn.workspace = true
hmac.workspace = true
http.workspace = true
quinn.workspace = true
rcgen.workspace = true
rustls.workspace = true
sha2.workspace = true
shadowsocks-crypto.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
