[package]
name = "keli-cli"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
keli-client-core.workspace = true
keli-net-core.workspace = true
keli-platform.workspace = true
keli-protocol.workspace = true
rustls.workspace = true
serde_json.workspace = true
shadowsocks-crypto.workspace = true
url.workspace = true
webpki-roots.workspace = true

[dev-dependencies]
aes.workspace = true
aes-gcm.workspace = true
base64.workspace = true
bytes.workspace = true
chacha20poly1305.workspace = true
crc32fast.workspace = true
h2.workspace = true
h3.workspace = true
h3-quinn.workspace = true
hmac.workspace = true
http.workspace = true
md-5.workspace = true
quinn.workspace = true
rcgen.workspace = true
rustls.workspace = true
sha2.workspace = true
sha3.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
