[package]
name = "keli-net-core"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
base64.workspace = true
bytes.workspace = true
h3.workspace = true
h3-quinn.workspace = true
http.workspace = true
keli-protocol.workspace = true
rand.workspace = true
quinn.workspace = true
rustls.workspace = true
sha1.workspace = true
sha2.workspace = true
shadowsocks-crypto.workspace = true
tokio.workspace = true
webpki-roots.workspace = true

[dev-dependencies]
rcgen.workspace = true
