[package]
name = "keli-net-core"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
aes.workspace = true
aes-gcm.workspace = true
base64.workspace = true
bytes.workspace = true
chacha20poly1305.workspace = true
crc32fast.workspace = true
h2.workspace = true
h3.workspace = true
h3-quinn.workspace = true
hmac.workspace = true
http.workspace = true
keli-protocol.workspace = true
md-5.workspace = true
rand.workspace = true
quinn.workspace = true
rustls.workspace = true
sha1.workspace = true
sha2.workspace = true
sha3.workspace = true
shadowsocks-crypto.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
webpki-roots.workspace = true

[dev-dependencies]
rcgen.workspace = true
